--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <script src="lib/js/jquery.js"></script>
         <script src="lib/js/underscore.js"></script>
         <script src="lib/js/backbone.js"></script>
+        <script src="js/cat-view.js"></script>
+        <script src="js/counter-view.js"></script>
+        <script src="js/app.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -21,16 +24,17 @@
         <!-- Add your site or application content here -->
         <div class="container">
           <div class="row">
-            <div class="col-xs-12 text-center" id="cat"></div>
+            <div class="col-xs-12"><h1 class="page-header text-center">Cat Clicker</h1></div>
           </div>
           <div class="row">
-            <div class="col-xs-4 col-xs-offset-4" id="counter"></div>
+            <div class="col-xs-12"><div  id="cat"></div><br></div>
           </div>
-        </div>
+          <div class="row">
+            <div class="col-xs-2 col-xs-offset-5">
+              <div class="well well-sm text-center"><span id="count" class="lead"></span></div>
+            </div>
+          </div>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/{{JQUERY_VERSION}}/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        </div>
     </body>
 </html>
