--- a/index.html
+++ b/index.html
@@ -12,9 +12,26 @@
         <script src="lib/js/jquery.js"></script>
         <script src="lib/js/underscore.js"></script>
         <script src="lib/js/backbone.js"></script>
+        <script src="lib/js/backbone.marionette.js"></script>
+        <script src="js/cat.js"></script>
         <script src="js/cat-view.js"></script>
-        <script src="js/counter-view.js"></script>
         <script src="js/app.js"></script>
+        <script id="cat-template" type="text/plain">
+          <div class=" col-xs-6 col-sm-4 col-md-4">
+          <div class="panel panel-primary ">
+            <div class="panel-heading text-center"><h4><% print(name) %></h4></div>
+            <div class="panel-body">
+              <img src="<% print(image) %>"
+                   alt="A cat named <% print(name) %>"
+                   class="img-responsive thumbnail">
+              </img>
+              <div class="text-center count "></div>
+            </div>
+
+
+            </div>
+          </div>
+        </script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -24,17 +41,12 @@
         <!-- Add your site or application content here -->
         <div class="container">
           <div class="row">
-            <div class="col-xs-12"><h1 class="page-header text-center">Cat Clicker</h1></div>
-          </div>
-          <div class="row">
-            <div class="col-xs-12"><div  id="cat"></div><br></div>
-          </div>
-          <div class="row">
-            <div class="col-xs-2 col-xs-offset-5">
-              <div class="well well-sm text-center"><span id="count" class="lead"></span></div>
+            <div class="col-xs-12">
+              <h1 class="page-header text-center">Cat Clicker</h1>
             </div>
           </div>
 
+          <div id="cats" class="row"></div>
         </div>
     </body>
 </html>
