setup html and css for admin view

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
       <main>
         <div id="list"></div>
         <div id="cat"></div>
+        <div id="admin">
+          <input type="button" id="adminbutton" value="Admin"/>
+          <form>
+            <div><label for="cat-name">Name:</label><input type="text" id="cat-name" name="cat-name" /></div>
+            <div><label for="cat-image">Image:</label><input type="text" id="cat-image" name="cat-image" /></div>
+            <div><label for="cat-clicks">Clicks:</label><input type="number" id="cat-clicks" name="cat-clicks" /></div>
+            <div><input type="button" id="cancel" value="Cancel"/><input type="button" id="save" value="Save"/></div>
+          </form>
+        </div>
       </main>
       <script src="app.js"></script>
     </div>
