--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div id="cat"></div>
         <div id="admin">
           <input type="button" id="adminbutton" value="Admin"/>
-          <form>
+          <form id="adminform">
             <div><label for="cat-name">Name:</label><input type="text" id="cat-name" name="cat-name" /></div>
             <div><label for="cat-image">Image:</label><input type="text" id="cat-image" name="cat-image" /></div>
-            <div><label for="cat-clicks">Clicks:</label><input type="number" id="cat-clicks" name="cat-clicks" /></div>
-            <div><input type="button" id="cancel" value="Cancel"/><input type="button" id="save" value="Save"/></div>
+            <div><label for="cat-count">Clicks:</label><input type="number" id="cat-count" name="cat-count" /></div>
+            <div><input type="button" id="cancelButton" value="Cancel"/><input type="submit" id="saveButton" value="Save"/></div>
           </form>
         </div>
       </main>
